# katana-hypervisor

./: .tool-versions  Cargo.toml  README.md  TESTING.md
boot-components/: .gitignore  README.md  ovmf.fd
crates/katana-cli/: Cargo.toml
crates/katana-cli/src/: config.rs  format.rs  main.rs  models.rs
crates/katana-cli/src/commands/: create.rs  delete.rs  list.rs  logs.rs  mod.rs  show.rs  start.rs  stats.rs  stop.rs
crates/katana-client/: Cargo.toml
crates/katana-client/src/: lib.rs
crates/katana-core/: Cargo.toml
crates/katana-core/src/: lib.rs
crates/katana-core/src/instance/: config.rs  storage.rs  storage_tests.rs
crates/katana-core/src/port/: allocator_tests.rs
crates/katana-core/src/qemu/: config.rs  mod.rs  qmp.rs  vm.rs  vm_instance.rs  vm_managed.rs
crates/katana-core/src/state/: db.rs  mod.rs
crates/katana-daemon/: Cargo.toml
crates/katana-daemon/src/: error.rs  main.rs  state.rs
crates/katana-daemon/src/api/: instances.rs  logs.rs  mod.rs  operations.rs  stats.rs
crates/katana-daemon/src/models/: conversions.rs  mod.rs
crates/katana-models/: Cargo.toml
crates/katana-models/src/: lib.rs
src/: error.rs  lib.rs  main.rs
src/cli/: attest.rs  create.rs  delete.rs  list.rs  logs.rs  measure.rs  mod.rs  start.rs  stats.rs  stop.rs
src/instance/: config.rs  mod.rs  state.rs  storage.rs  storage_tests.rs
src/port/: allocator.rs  allocator_tests.rs  mod.rs
src/qemu/: config.rs  config_tests.rs  mod.rs  monitor.rs  qmp.rs
src/state/: db.rs  db_tests.rs
src/tee/: attestation.rs  build.rs  measurement.rs  mod.rs  sev_snp.rs
tests/: integration_tests.rs
