[workspace]
members = [
    "crates/katana-core",
    "crates/katana-models",
    "crates/katana-client",
    "crates/katana-daemon",
    "crates/katana-cli",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies shared across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# State/DB
rusqlite = { version = "0.32", features = ["bundled"] }

# QEMU/VM
qmp = "0.1"
nix = { version = "0.29", features = ["process", "signal", "quota", "fs", "ioctl"] }
libc = "0.2"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
byte-unit = "5.1"
hex = "0.4"
sha2 = "0.10"
directories = "5.0"
dirs = "5.0"
tempfile = "3.9"
port_scanner = "0.1"
sysinfo = "0.32"

# HTTP (for katana RPC calls)
reqwest = { version = "0.12", features = ["json"] }
ureq = "2.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
