[package]
name = "katana-client"
version = "0.1.0"
edition = "2021"

[dependencies]
katana-models = { path = "../katana-models" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

# HTTP client
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }
http-body-util = "0.1"

# SSE client
eventsource-stream = "0.2"
futures = "0.3"
