[package]
name = "katana-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# State/DB
rusqlite = { workspace = true }

# QEMU/VM
qmp = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
byte-unit = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
directories = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
port_scanner = { workspace = true }
sysinfo = { workspace = true }

# HTTP (for katana RPC calls inside VMs)
reqwest = { workspace = true }
ureq = { workspace = true }
