[package]
name = "katana-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
katana-core = { path = "../katana-core" }
katana-models = { path = "../katana-models" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP server
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# WebSocket
tokio-tungstenite = "0.21"

# SSE streaming
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
futures = "0.3"
inotify = { version = "0.10", optional = true }

# Utilities
directories = { workspace = true }
byte-unit = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[features]
default = ["inotify"]
